--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ MINIO_DATA_DIR=/data
 MINIO_ACCESS_KEY=miniotest
 MINIO_SECRET_KEY=miniotest
 
-LISTENER_VERSION=0.1.0
+LISTENER_VERSION=0.1.1
+LISTENER_ENV=development
 
 WES_VERSION=3.3
 WES_PORT=5000
