Updated Listener and Docker related files to adhere to the workflow, allowing for a clean normalize on ingest. Updated normalize tool to use an image with bcftools. Updated all workflow pathing to be less toxic to the eyes and avoid code duplication.

--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ LISTENER_ENV=development
 WES_VERSION=3.3
 WES_PORT=5000
 WES_BACKEND=wes_service.cwl_runner
-WES_CWL_RUNNER=cwltoil
+WES_CWL_RUNNER=cwltool
 WES_LOG=DEBUG
