Generalized credentials and minio data to come from inputs from listener

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MINIO_VERSION=latest
 MINIO_UI_PORT=9000
 MINIO_REGION=us-east-1
-MINIO_DOMAIN=candig.local
+MINIO_DOMAIN=host.docker.internal
 MINIO_DATA_DIR=/data
 
 MINIO_ACCESS_KEY=miniotest
