--- a/docker-files/listener/Dockerfile
+++ b/docker-files/listener/Dockerfile
@@ -5,8 +5,8 @@ RUN pip install minio
 RUN pip install werkzeug==0.16.1
 RUN pip install connexion==1.4.2
 RUN pip install wes-service
-COPY listener.py /srv/listener.py
-COPY workflowInput.json /srv/workflowInput.json
-COPY workflow-data/ /srv/workflow-data/
+# COPY listener.py /srv/listener.py
+# COPY workflowInput.json /srv/workflowInput.json
+# COPY workflow-data/ /srv/workflow-data/
 WORKDIR /srv
 ENTRYPOINT [ "python", "/srv/listener.py"]
