--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,14 +141,13 @@ services:
       - --backend=${WES_BACKEND:-wes_service.cwl_runner}
       - --opt=runner=${WES_CWL_RUNNER:-cwltool}
 
-  ga4gh-dos:
-    # build: # No need to build here, we'll just pull the image
-    #   context: $PWD/lib/ga4gh-dos
-    #   args:
-    #     dos_version: ${DOS_VERSION:-0.4.2}
-    image: candig/ga4gh-drs-server:${DOS_VERSION:-latest}
+  chord-drs:
+    build:
+      context: $PWD/docker-files/drs-server
+    image: candig/chord-drs:${CHORD_DRS_VERSION:-latest}
     ports:
-      - "${DOS_PORT:-8080}:8080"
+      - "${CHORD_DRS_PORT:-8080}:8080"
+    command: ["--host", "0.0.0.0", "--port", "8080"]
 
 volumes:
   minio-data:
