--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -32,7 +32,8 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile
+            docker build . --file docker-files/listener/Dockerfile
+            docker build . --file docker-files/drs-server/Dockerfile
           fi
 
   # Push image to GitHub Package Registry.
