Mounted DRS container to minio container. Fixed drs request to communicate properly with minio. Created 'drs' minio bucket for drs related files

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ MINIO_UI_PORT=9000
 MINIO_REGION=us-east-1
 MINIO_DOMAIN=host.docker.internal
 MINIO_DATA_DIR=/data
+MINIO_PROCESSED_DIR=samples/processed
+MINIO_DRS_BUCKET=drs
 
 MINIO_ACCESS_KEY=miniotest
 MINIO_SECRET_KEY=miniotest
