Generalized Listener Port to env var

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ MINIO_DRS_BUCKET=drs
 MINIO_ACCESS_KEY=miniotest
 MINIO_SECRET_KEY=miniotest
 
+LISTENER_PORT=8081
 LISTENER_VERSION=0.1.5
 LISTENER_ENV=development
 
