Transfered to CHORD DRS completely

--- a/.env
+++ b/.env
@@ -19,8 +19,9 @@ WES_BACKEND=wes_service.cwl_runner
 WES_CWL_RUNNER=cwltool
 WES_LOG=DEBUG
 
-DOS_PORT=8080
+DOS_PORT=8082
 DOS_HOST=host.docker.internal
 TRAEFIK_VERSION=1.7.12
 
 CHORD_DRS_PORT=8080
+CHORD_DRS_HOST=host.docker.internal
